--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "api-restaurant",
   "version": "1.0.0",
+  "description": "API para gerenciar pedidos das mesas de um restaurante",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "scripts": {},
+  "author": "Juan Pablo",
+  "license": "ISC"
 }
